Archive2/88/3c4056fc605863/output
main.cpp:22:8: error: no matching member function for call to 'fun'
    d2.fun<double>();
    ~~~^~~~~~~~~~~
main.cpp:13:66: note: candidate template ignored: disabled by 'enable_if' [with X = double, Y = int]
    template <typename X, typename Y =T, typename std::enable_if<std::is_floating_point<Y>::value, void>::type* = nullptr>
                                                                 ^
1 error generated.
